--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <button>Store</button>
         <button onclick="window.open('https://discord.com', '_blank')">Discord</button>
       </div>
-      <p class="pronunciation">Pronunciation ("Black-it")</p>
     </div>
 
     <div class="avatar-grid" id="avatarGrid"></div>
   </div>
 
+  <div class="bottom-left">Pronunciation ("Black-it")</div>
   <div class="bottom-right">Running Slooket 2.3.0</div>
 
   <script src="script.js"></script>
