--- a/welcome/index.html
+++ b/welcome/index.html
@@ -29,7 +29,7 @@
     <div class="avatar-grid" id="avatarGrid"></div>
   </div>
 
-  <div class="bottom-left">Pronunciation ("Black-it")</div>
+  <div class="bottom-left">Pronunciation ("sloo-kit")</div>
   <div class="bottom-right">Running Slooket 2.3.0</div>
 
   <script src="script.js"></script>
