--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>SLOOKET</h1>
       <p class="subtitle">WE ARE SO COOL...</p>
       <p class="description">
-        A open-source Blooket private server created by Slooket written entirely in JavaScript.
+        A open-source Blooket private server created by Slooket written entirely in JavaScript. (don't worry, this is the beta version so it wont be like this forever.)
       </p>
       <div class="button-group">
         <button>Register</button>
