--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 
   <div class="bottom-left">Pronunciation ("sloo-kit")</div>
-  <div class="bottom-right">Running Slooket 2.3.0</div>
+  <div class="bottom-right">Running Slooket 1.0.0 Beta</div>
 
   <script src="script.js"></script>
 </body>
