--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <h1>SLOOKET</h1>
       <p class="subtitle">WE ARE SO COOL...</p>
       <p class="description">
-        A open-source Blooket private server created by Slooket written entirely in JavaScript. (don't worry, this is the beta version so it wont be like this forever.)
+        A open-source Blooket private server created by Slooket written entirely in JavaScript. (don't worry, this is the beta version so it won't be like this forever.)
       </p>
       <div class="button-group">
         <button>Register</button>
         <button>Store</button>
-        <button onclick="window.open('https://discord.com', '_blank')">Discord</button>
+        <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfzKgizQQT2yZQe6iHsMqjSKvh0QiAEIt2pEcfck54qXm9yPg/viewform?usp=dialog', '_blank')">Become Staff</button>
       </div>
     </div>
 
