--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>SLOOKET</h1>
       <p class="subtitle">WE ARE SO COOL...</p>
       <p class="description">
-        A open-source Blooket private server created by Slooket written entirely in JavaScript.
+        A open-source Blooket private server created by Slooket written entirely in JavaScript. (VERSION IS CURRENTLY IN BETA, PAGES MAYBE DEFORMED OR UNAVALIABLE.)
       </p>
       <div class="button-group">
         <button>Register</button>
@@ -39,6 +39,6 @@
 
   <!-- Footer notes -->
   <div class="bottom-left">Pronunciation ("Sloo-Kit")</div>
-  <div class="bottom-right">Running Slooket 2.3.0</div>
+  <div class="bottom-right">Running Slooket 1.0.0 Beta</div>
 </body>
 </html>
