--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
   <!-- Main layout -->
   <div class="main">
     <div class="left-panel">
-      <h1>SLOOKET</h1>
       <p class="subtitle">WE ARE SO COOL...</p>
       <p class="description">
-        A open-source Blooket private server created by Slooket written entirely in JavaScript. (VERSION IS CURRENTLY IN BETA, PAGES MAYBE DEFORMED OR UNAVALIABLE.)
+        A open-source Blooket private server created by Slooket written entirely in JavaScript. Version currently in beta.
       </p>
       <div class="button-group">
         <button>Register</button>
