--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="left-panel">
       <p class="subtitle">WE ARE SO COOL...</p>
       <p class="description">
-        A open-source Blooket private server created by Slooket written entirely in JavaScript. Version currently in beta.
+        A open-source Blooket private server created by Slooket written entirely in JavaScript.
       </p>
       <div class="button-group">
         <button>Register</button>
@@ -38,6 +38,6 @@
 
   <!-- Footer notes -->
   <div class="bottom-left">Pronunciation ("Sloo-Kit")</div>
-  <div class="bottom-right">Running Slooket 1.0.0 Beta</div>
+  <div class="bottom-right">Running Slooket 2.3.0</div>
 </body>
 </html>
