--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 						<br>
 					</div>
 					<div class="welcomecontainer">
-						<div class="welcometext">Useful<br>Organized<br>Links</div>
+						<div class="welcometext">Nice<br>Privite<br>Server</div>
 						<div class="welcomedesc">The first ever open-source Blooket private server<br>created by bigWhiteThing written entirely in frontend Code.</div>
 						<div class="pronunciationbutton" id="pronunciationbutton" onclick="pronunciation()">
 							<i class="fas fa-volume-up fa-1x" aria-hidden="true"></i>
