--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 						<br>
 					</div>
 					<div class="welcomecontainer">
-						<div class="welcometext">Nice<br>Privite<br>Server</div>
-						<div class="welcomedesc">The first ever open-source Blooket private server<br>created by bigWhiteThing written entirely in frontend Code.</div>
+						<div class="welcometext">Blooket<br>But<br>Books</div>
+						<div class="welcomedesc">The first ever open-source Book themed Blooket private server<br>created by BigWhiteThing written entirely in frontend Code. (Currently in beta.)</div>
 						<div class="pronunciationbutton" id="pronunciationbutton" onclick="pronunciation()">
 							<i class="fas fa-volume-up fa-1x" aria-hidden="true"></i>
 							&nbsp; Pronunciation
@@ -327,9 +327,10 @@
 
 </body>
 </html>		
-		<div class="footer">
-					<p id="BigWhiteThing">Courtesy of: BigWhiteThing</p>
-					<h2 class="notbooket">This page is a remake of booket</h2>
+				<div class="footer">
+					<p id="wat">Courtesy of: wat</p>
+					<h2 class="notblooket">This page is a Remake of Blooket</h2>
+					<h2 class="madeby">Made by BigWhiteThing and Booket</h2>
 				</div>
 			</div>
 		</div>
@@ -353,3 +354,4 @@
 		</script>
 	</body>
 </html>
+
