--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" >
 	<head id="head">
@@ -16,162 +15,115 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content= "Booket is a fun learning game that helps you study. It is simple, makes learning exciting, and is perfect for school or home. Join booket Game Now!">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-		<style media="all" id="fa-v4-font-face"></style>
-		<script src="https://kit.fontawesome.com/984809ea42.js"></script>
-		<style>
-			html{background-color:#f5f5f5;
-				width:100vw;
-				overflow:hidden;
-			}
-			.linkbutton{display:flex;align-items:center;flex-direction:row;flex:1;align-self:stretch;background-color:#0bc2cf;box-shadow:0 0 8px 3px rgba(0,0,0,.2);border-radius:6px;color:#fff;font-family:Nunito,sans-serif;outline:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;text-decoration:none;cursor:pointer;padding:15px 10px;min-width:180px;margin:7px;font-size:30px;line-height:27px;text-align:center;transition:.2s;align-self:center;align-content:center;justify-content:center;}
-			.linkbutton:hover{opacity:0.90;transform:scale(.97);}
-			.buttontext{padding:7.5px;padding-left:5%;}
-			.buttoncontainer{flex-flow:row wrap;justify-content:space-between;margin:20px auto 0;width:90%;display:flex;}
-			.bottombuttoncontainer{margin-bottom:25px;}
-			.buttonholder{height:auto;width:100%;background-color:#fff;display:flex;flex-direction:column}
-			i{font-size:50px;}
-			.btnhvrtxt{visibility:hidden;background-color:#000a;color:#fff;font-family:Nunito;font-size:20px;text-align:center;padding:1px 15px;border-radius:5px;bottom:105%;z-index:1;position:absolute;transition-delay:0.25s;}
-			.linkbutton:hover .btnhvrtxt{visibility:visible;}
-			.body{top:0;min-height:100%;overflow-x:hidden;overflow-y:scroll;-webkit-overflow-scrolling:touch;background-color:#f7f7f7;margin:0;padding:0;position:absolute;left:0;width:100%;z-index:-1;}
-			.stylesholder{width:100%;height:100%;margin:0;padding:0;position:absolute;top:0;left:0}
-			.headercontainer{height:90vh;width:100%;overflow:hidden;position:relative;}
-			.headerimage{height:90vh;width:55%;position:absolute;top:0;right:0;-o-object-fit:contain;object-fit:contain;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;z-index:-1;}
-			.headerside{background-color:#0bc2cf;box-shadow:0 0 8px 3px rgba(0,0,0,.2);width:70vw;height:125vh;position:absolute;top:-10vh;left:-20vw;transform:rotate(-15deg);z-index:-1;}
-			.topheadercontainer{position:absolute;top:3vh;left:2.5vw;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;display:flex;flex-direction:row;align-items:center;}
-			.logotext{font-size:7.3vh;font-family:Titan One,sans-serif;text-shadow:2px 2px 8px grey;color:#fff;}
-			.welcomecontainer{position:absolute;top:22vh;left:5vw;font-family:Nunito,sans-serif;color:#fff;display:flex;flex-direction:column;}
-			.welcometext{font-size:8.83vh;line-height:9.13vh;text-shadow:2px 2px 8px grey;font-weight:700;user-select:none;}
-			.welcomedesc{font-size:3.35vh;margin:3vh 0;user-select:none;}
-			.pronunciationbutton{font-family:Nunito,sans-serif;color:#fff;font-size:3vh;line-height:4vh;margin-top:5vh;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;outline:none;padding:0 10px;transition:0.2s;}
-			.pronunciationbutton:hover{color:#ddd;}
-			.menuholder{min-height:75%;height:auto;max-width:100%; width:100%;background-color:#fff;display:flex;flex-direction:column;overflow:hidden;}
-			.lowerbackground{background-color:#fff;width:120vw;height:60vh;position:absolute;top:90vh;left:-10vw;transform-origin:top left;transform:rotate(-2deg);z-index:-1;overflow:hidden;}
-			.menutext{font-size:52px;padding:3.5vh 12.5%;font-weight:700;font-size:250%;position:relative;color:#3a3a3a;text-align:center;font-family:Nunito,sans-serif;}
-			@media only screen and (max-width:950px){
-				.headercontainer{height:100vh;}
-				.headerimage{top:6vh;height:42vh;width:100%;}
-				.headerside{width:130vw;height:65vh;top:40vh;left:-20vw;transform:rotate(4deg);}
-				.topheadercontainer{left:5vw;top:41vh;flex-direction:column;align-items:flex-start;}
-				.welcomecontainer{top:57.5vh;}
-				.welcometext{font-size:6vh;line-height:6.5vh;}
-				.welcomedesc{font-size:2.2vh;margin:1.5vh 0 3vh;}
-				.lowerbackground{top:100vh;overflow:hidden;}
-				.pronunciationbutton{font-size:2vh;line-height:3vh;margin-top:1.5vh}
-			}
-			@media screen and (max-width:950px) and (orientation:landscape){
-				.stylesholder{height:100vw;}
-				.headerimage{width:100vw;height:42vw;}
-
-			}
-			.noclick{
-				background-color:rgba(0,0,0,0);
-				position:absolute;
-				width:100vw;
-				height:200%;
-				left:0px;
-				top:0px;
-				display:none;
-				overflow:hidden;
-			}
-			.noclickcontainer{
-				overflow:hidden;
-			}
-			#wat{
-				display:block;
-				color:#fff;
-				font-family:Nunito;
-				font-size:42px;
-				font-weight:bold;
-				vertical-align:middle;
-				text-align:center;
-				padding-top:4vh 12px;
-			}
-			.footer{
-				width:110%;
-				overflow:hidden;
-				height:300px;
-				background-color:#013285;
-				margin-left:-5%;
-			}
-			.footertext{
-				font-weight:normal;
-				font-family:Nunito;
-				font-size:120%;
-				color:#fff;
-			}
-			.footbutton{
-				text-decoration:none;
-				color:#fff;
-			
-
-			}
-			.i{
-				display:inline;
-				color:#fff;
-				vertical-align:top;
-				margin-right:10px;
-			}
-			.mainpage{
-				background-color:#0bc2cf;
-				border-radius:10px;
-				width:20%;
-				height:auto;
-				vertical-align:center;
-				text-align:center;
-				box-shadow:0 0 15px #001063;
-				display:inline-block;
-				margin:50px 40% 50px 40%;
-				align-items:center;
-				font-weight:bolder;
-				font-size:20px;
-				transition:.2s
-				}
-				.mainpage:hover{
-					background-color:#24c8d4;
-					transform:scale(.97);
-				}
-				.notbooket{
-					font-family:Nunito;
-					color:#fff;
-					width:100%;
-					text-align:center;
-
-				}
-				.madeby{
-					font-family:Nunito;
-					color:#fff;
-					font-weight:lighter;
-					font-size:25px;
-					width:100%;
-					text-align:center;
-				}
-		</style>
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-		<style >@import url(https://fonts.googleapis.com/css?family=Nunito:400,700|Titan+One|Creepster|Satisfy|Black+Ops+One|Eczar:700);</style>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9130132499717675"
-     crossorigin="anonymous"></script>
-		
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<div class="body">
-			<div class="stylesholder">
-				<div class="headercontainer">
-					<img src="media/fallingbooksTransparent.png" alt="Books" class="headerimage" draggable="false">
-					<div class="headerside">
-					</div>
-					<div class="topheadercontainer">
-						<div class="logotext">Booket</div>
-						<br>
-					</div>
-					<div class="welcomecontainer">
-						<div class="welcometext">Blooket<br>But<br>Books</div>
-						<div class="welcomedesc">The first ever open-source Book themed Blooket private server<br>created by BigWhiteThing written entirely in frontend Code.<br>(Currently in beta.)</div>
-						<div class="pronunciationbutton" id="pronunciationbutton" onclick="pronunciation()">
-							<i class="fas fa-volume-up fa-1x" aria-hidden="true"></i>
-							&nbsp; Pronunciation
-						</div>
-					</div>
-				</div>
+		<div class="header">
+			<div class="title">Booket</div>
+			<div class="buttons">
+				<a href="/play" class="button">Play</a>
+				<a href="/login" class="button">Login</a>
+				<a href="/signup" class="button">Signup</a>
+			</div>
+		</div>
 		
+		<div class="content">
+			<h1>Welcome to Booket</h1>
+			<p>Fun learning games to make studying exciting. Perfect for students and teachers.</p>
+			<a href="/play" class="play-button">Play Now</a>
+		</div>
 
+		<div class="footer">
+			<p>&copy; 2025 Booket. All rights reserved.</p>
+		</div>
+
+		<!-- Disclaimer -->
+		<div class="disclaimer">
+			<p>We are not affiliated with Blooket in any way.<br>
+			Please do not contact Blooket about any issues you may have with Booket.<br>
+			Booket© 2025 All Rights Reserved.</p>
+		</div>
+
+		<style>
+			body {
+				font-family: Nunito, sans-serif;
+				margin: 0;
+				background: linear-gradient(135deg, #00c6ff, #0072ff);
+				color: #fff;
+				text-align: center;
+			}
+
+			.header {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				padding: 20px;
+				background: rgba(0, 0, 0, 0.4);
+			}
+
+			.title {
+				font-size: 32px;
+				font-weight: bold;
+			}
+
+			.buttons .button {
+				margin-left: 15px;
+				padding: 10px 20px;
+				background: #fff;
+				color: #0072ff;
+				text-decoration: none;
+				border-radius: 5px;
+				font-weight: bold;
+				transition: background 0.3s, color 0.3s;
+			}
+
+			.buttons .button:hover {
+				background: #0072ff;
+				color: #fff;
+			}
+
+			.content {
+				margin-top: 100px;
+			}
+
+			.play-button {
+				display: inline-block;
+				margin-top: 20px;
+				padding: 15px 30px;
+				background: #fff;
+				color: #0072ff;
+				text-decoration: none;
+				border-radius: 5px;
+				font-size: 18px;
+				font-weight: bold;
+				transition: background 0.3s, color 0.3s;
+			}
+
+			.play-button:hover {
+				background: #0072ff;
+				color: #fff;
+			}
+
+			.footer {
+				margin-top: 100px;
+				padding: 20px;
+				background: rgba(0, 0, 0, 0.3);
+			}
+
+			/* Disclaimer Styling */
+			.disclaimer {
+				position: fixed;
+				bottom: 10px;
+				left: 10px;
+				font-size: 14px;
+				color: #fff;
+				background: rgba(0, 0, 0, 0.6);
+				padding: 8px 12px;
+				border-radius: 5px;
+				max-width: 300px;
+				line-height: 1.4em;
+				text-align: left;
+			}
+		</style>
+	</body>
+</html>
