--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						<div class="pronunciationbutton" id="pronunciationbutton" onclick="pronunciation()">
 							<i class="fas fa-volume-up fa-1x" aria-hidden="true"></i>
 							&nbsp; Pronunciation
-						<div class="disclaimer">We are not affiliated with Blooket in any way.<br>Please do not contact Blooket about any issues you may have with Booket.<br>Booket© 2025 All Rights Reserved.</p>
+						</div>
 					</div>
 				</div>
 		<head>
