--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					</div>
 					<div class="welcomecontainer">
 						<div class="welcometext">Blooket<br>But<br>Books</div>
-						<div class="welcomedesc">The first ever open-source Book themed Blooket private server<br>created by BigWhiteThing written entirely in frontend Code.<br>(Currently in beta.)</div>
+						<div class="welcomedesc">The first ever open-source Book themed Blooket private server<br>created by Ethan Guel written entirely in frontend Code.<br>(Currently in beta.)</div>
 						<div class="pronunciationbutton" id="pronunciationbutton" onclick="pronunciation()">
 							<i class="fas fa-volume-up fa-1x" aria-hidden="true"></i>
 							&nbsp; Pronunciation
